# earth2grid

./: .buildinfo  .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  api.html  changelog.html  compile_healpix.py  contributing.html  genindex.html  index.html  installation.html  makefile  mkdocs.yml  objects.inv  padding_debug.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  usage.html  wcrp_healpix_tutorial.html
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
_downloads/34b6866be0e848763dd133fe6fad1ab5/: local_padding.ipynb
_downloads/4ce3e205efd2858e449755e0ff8247ea/: healpix_pixelization.ipynb
_downloads/99bcd0a536464cd352f3c5238c384905/: benchmark_healpix_pad_timing.ipynb
_downloads/a0fb23b6404ea0f060e2ee086a2a1fd2/: pyvista_grids.py
_downloads/bc5f3d8ff2e85ce704e6bc194c4a1825/: pyvista_grids.ipynb
_downloads/ceda851f459aa1125447c51ea42b0e9e/: hpx2grid.ipynb
_downloads/f6888b7c20ca92b13107eb2bef6349b7/: latlon_to_healpix.ipynb
_sources/: api.rst.txt  changelog.md  index.rst  index.rst.txt  installation.md.txt  sg_execution_times.rst  sg_execution_times.rst.txt
_sources/auto_examples/: benchmark_healpix_pad_timing.rst  healpix_pixelization.rst  healpix_tutorial.ipynb  hpx2grid.ipynb  hpx2grid.rst  hpx2grid.rst.txt  index.rst  index.rst.txt  latlon_to_healpix.ipynb  latlon_to_healpix.rst  latlon_to_healpix.rst.txt  local_padding.rst  pyvista_grids.ipynb  pyvista_grids.rst  pyvista_grids.rst.txt  sg_execution_times.rst  sg_execution_times.rst.txt
_sources/tutorials/: healpix.md
auto_examples/: benchmark_healpix_pad_timing.html  healpix_pixelization.html  healpix_tutorial.html  hpx2grid.html  index.html  latlon_to_healpix.html  local_padding.html  pyvista_grids.html  sg_execution_times.html
docs/: .gitignore  Makefile  api.md  api.rst  conf.py  healpix_tutorial.qmd  image_scraper.py  index.rst  installation.md  push_docs.sh  usage.md  wcrp_healpix_tutorial.qmd
docs/tutorials/: healpix.md  index.rst
earth2grid/: Makefile  __init__.py  _bit_ops.py  _regrid.py  base.py  healpix.py  healpix_bare.py  healpixpad.py  latlon.py  lcc.py  projections.py  spatial.py  yinyang.py
earth2grid/csrc/: healpix_bare_wrapper.cpp  interpolation.h
earth2grid/csrc/healpixpad/: cudamacro.h  healpixpad.h  healpixpad_cuda.cpp  healpixpad_cuda_bwd.cu  healpixpad_cuda_fwd.cu
earth2grid/cubedsphere/: __init__.py
earth2grid/cubedsphere/e3sm/: __init__.py  core.py
earth2grid/cubedsphere/e3sm/_padding/: __init__.py
earth2grid/cubesphere/: __init__.py  core.py
earth2grid/cubesphere/_padding/: __init__.py
earth2grid/healpix/: __init__.py  coordinates.py  core.py  nn.py  padding.py  visualization.py  wavelet.py
earth2grid/healpix/_padding/: __init__.py  cuda.py  pure_python.py
earth2grid/regridding/: interpolation.h  test_interpolation.cpp
examples/: README.rst  healpix_pyvista.py  hpx2grid.py  latlon_to_healpix.py  patch_diffusers.py  pyvista_grids.py  regrid_to_given_lat_lon.py  test_cubesphere_padding_visualization.py  yinyang.py
examples/sphinx_gallery/: README.rst  benchmark_healpix_pad_timing.py  healpix_pixelization.py  hpx2grid.py  latlon_to_healpix.py  local_padding.py
tests/: __init__.py  test__bit_ops.py  test_cubedsphere_padding.py  test_cubesphere_padding.py  test_earth2grid.py  test_healpix.py  test_healpix_bare.py  test_healpix_padding.py  test_latlon.py  test_lcc.py  test_regrid.py  test_spatial.py  test_yingyang.py
tests/_license/: config.json  header_check.py
tests/_regtest_outputs/: test_healpix.test__to_mesh.out  test_healpix.test_latlon_regression.out  test_healpix.test_to_double_pixelization.out  test_healpix_bare.test_boundaries.out  test_healpix_bare.test_hpc2loc.out  test_healpix_bare.test_pix2ang[False-False].out  test_healpix_bare.test_pix2ang[False-True].out  test_healpix_bare.test_pix2ang[True-False].out  test_healpix_bare.test_pix2ang[True-True].out  test_healpix_padding.test_hpx_pad.out
tutorials/: healpix.html  index.html
