[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earth2-grid"
version = "2024.5.1"
description = "Utilities for working with geographic data defined on various grids."
readme = "README.md"
license = { file="LICENSE" }
authors = [
    { name = "NVIDIA", email = "nbrenowitz@nvidia.com" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "einops>=0.7.0",
    "healpy>=0.0.0",
    "netCDF4>=1.6.5",
    "numpy>=1.23.3",
    "pandas>=1.5.0",
    "pyvista>=0.43.2",
    "torch>=2.0.1",
]

[project.urls]
"Homepage" = "https://github.com/waynerv/earth2-grid"


[project.optional-dependencies]
test = [
    "pytest>=6.2.4",
    "black>=21.5b2",
    "isort>=5.8.0",
    "mypy>=0.900",
    "flake8>=3.9.2",
    "flake8-docstrings>=1.6.0",
    "pytest-cov>=2.12.0"
]
dev = [
    "tox>=3.20.1",
    "pre-commit>=2.12.0",
    "virtualenv>=20.2.2",
    "pip>=20.3.1",
    "twine>=3.3.0",
    "toml>=0.10.2",
    "bump2version>=1.0.1"
]
doc = [
    "sphinx",
    "myst-parser",
    "sphinx_gallery",
]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
include = '\\.pyi?$'
exclude = '''
/(
    \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
